exibindo eventos do banco de dados

--- a/calendario.html
+++ b/calendario.html
@@ -6,15 +6,11 @@ if (!isset($_SESSION['nome'])) {
 	header('Location: index.php');
 }
 
-require_once("conexao.php");
-
-$idprofessor = $_SESSION['id_professor'];
-$sql = "SELECT * FROM events WHERE professor_idprofessor = $idprofessor;";
-$rs = mysqli_query($conn, $sql);
-
 $nome = $_SESSION['nome'];
 
+
 ?>
+
 
 <!DOCTYPE html>
 <html lang="pt-br">
@@ -26,13 +22,14 @@ $nome = $_SESSION['nome'];
 	<link rel="stylesheet" type="text/css" href="css/stylecalendario.css">
 	<link rel="icon" type="imagem/png" href="img/icone.png"/>
 
-	<link href='packages/core/main.min.css' rel='stylesheet' />
-	<link href='packages/daygrid/main.min.css' rel='stylesheet' />
+	<link href='packages/core/main.css' rel='stylesheet' />
+	<link href='packages/daygrid/main.css' rel='stylesheet' />
+	<link href='packages/timegrid/main.css' rel='stylesheet' />
 
-	<script src='packages/core/main.min.js'></script>
-	<script src='packages/interaction/main.min.js'></script>
-	<script src='packages/daygrid/main.min.js'></script>
-	<script src='packages/core/locales/pt-br.js'></script>
+	<script src='packages/core/main.js'></script>
+	<script src='packages/interaction/main.js'></script>
+	<script src='packages/daygrid/main.js'></script>
+	<script src='packages/timegrid/main.js'></script>
 	
 	<script>
 
@@ -40,25 +37,41 @@ $nome = $_SESSION['nome'];
 			var calendarEl = document.getElementById('calendar');
 
 			var calendar = new FullCalendar.Calendar(calendarEl, {
-				locale: 'pt-br',
-				plugins: [ 'interaction', 'dayGrid' ],
-				editable: true,
-      			eventLimit: true,
-      			events: [
-      				<?php 
-      					while($row = mysqli_fetch_array($rs)) {
-      						?>
-      						{
-      						id: '<?php echo $row['id'] ?>',
-      						title: '<?php echo $row['title'] ?>',
-      						color: '<?php echo $row['color'] ?>',
-      						start: '<?php echo $row['start'] ?>',
-      						end: '<?php echo $row['end'] ?>',
-      						},<?php
-      					}
-      				 ?>
-      			]
- 			});
+				plugins: [ 'interaction', 'dayGrid', 'timeGrid' ],
+				header: {
+					left: 'prev,next today',
+					center: 'title',
+					right: 'dayGridMonth,timeGridWeek,timeGridDay'
+				},
+				buttonText: {
+					today: 'Hoje',
+					month: 'Mês',
+					week: 'Semana',
+					day: 'Dia'
+				},
+
+				defaultDate: '2019-11-01',
+	      navLinks: true, // can click day/week names to navigate views
+	      selectable: true,
+	      selectMirror: true,
+	      select: function(arg) {
+	      	var title = prompt('Evento:');
+	      	if (title) {
+	      		calendar.addEvent({
+	      			title: title,
+	      			start: arg.start,
+	      			end: arg.end,
+	      			allDay: arg.allDay
+	      		})
+	      	}
+	      	calendar.unselect()
+	      },
+	      editable: true,
+	      eventLimit: true, // allow "more" link when too many events
+	      events: [
+
+	      ]
+	  });
 
 			calendar.render();
 		});
